--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Simona Cotin",
   "license": "MIT",
   "dependencies": {
+    "form-data-to-object": "^0.2.0",
     "the-noun-project": "^2.0.1"
   }
 }
